# jaxite

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  __init__.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: build_and_test.yml  periodic_tests.yml
bazel/: BUILD  test_oss.bzl
jaxite/jaxite_bool/: bool_encoding.py  bool_params.py  jaxite_bool.py  jaxite_bool_multigate_test.py  jaxite_bool_test.py  lut.py  lut_test.py  pmap_test.py  type_converters.py
jaxite/jaxite_cggi/: blind_rotate_test.py  bootstrap.py  bootstrap_test.py  decomposition.py  decomposition_test.py  encoding.py  encoding_test.py  jax_helpers.py  key_switch.py  key_switch_test.py  lwe.py  lwe_test.py  matrix_utils.py  matrix_utils_test.py  parameters.py  polymul_kernel.py  polymul_kernel_test.py  random_source.py  (+8 more)
jaxite_bool/: BUILD  bool_params.py  jaxite_bool.py  jaxite_bool_multigate_test.py  jaxite_bool_test.py  pmap_test.py  type_converters.py
jaxite_ckks/: bconv.py  ciphertext.py  ckks_ctx.py  key_gen.py  ntt_mm.py  ntt_mm_test.py  profiler.py
jaxite_ec/: README.md  configurations.toml  elliptic_curve.py  elliptic_curve_context.py  elliptic_curve_perf_test.py  elliptic_curve_test.py  finite_field.py  finite_field_context.py  finite_field_perf_test.py  finite_field_test.py  msm.py  msm_test.py  multiscalar_multiplication_context.py  multiscalar_multiplication_perf_test.py  multiscalar_multiplication_test.py  number_theory_transform_context.py  number_theory_transform_perf_test.py  number_theory_transform_test.py  pippenger.py  pippenger_rns.py  profiler.py  util.py  utils.py
jaxite_lib/: BUILD  blind_rotate_test.py  bootstrap.py  bootstrap_test.py  decomposition.py  decomposition_test.py  key_switch.py  key_switch_test.py  matrix_utils.py  rgsw.py  rgsw_test.py  rlwe.py  test_polynomial.py  types.py
jaxite_word/: add.py  add_test.py  finite_field.py  finite_field_test.py  ntt.py  ntt_test.py  sub.py  sub_test.py  util.py
(+140 files in other folders)
